# infinite-monkey

./: .gitignore  Cargo.toml  README.md  TODO.md  broken_config.toml  example_config.toml
src/: cli.rs  config.rs  generate.rs  main.rs
