[package]
name = "infinite-monkey"
version = "0.1.0"
authors = ["Zoee Silcock <mrzoee@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
time = { version = "0.3.32", features = ["formatting"] }
