[package]
name = "infinite-monkey"
version = "0.1.0"
authors = ["Zoee Silcock <mrzoee@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "2.2.2", features = ["serde"] }
rand = "0.8.5"
serde = "1.0.196"
serde_json = { version = "1.0.113", features = ["indexmap", "preserve_order"] }
time = { version = "0.3.32", features = ["formatting"] }
